# zq_server_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  make.sh
assets/: start_login_server.bat  start_login_server.sh  start_master_server.bat  start_master_server.sh  start_zone_server.bat  start_zone_server.sh  stop_login_server.sh  stop_master_server.sh  stop_zone_server.sh
assets/redis_cfg/: redis.conf
assets/redis_cfg/7001/: redis.conf
assets/redis_cfg/7002/: redis.conf
assets/redis_cfg/7003/: redis.conf
assets/script/: init_env.sh  setup_linux.sh  start_db_server.bat  start_login_server.bat  start_master_server.bat  start_world.bat  start_zone_server.bat
assets/server_cfg/: db_server_1.json  login_server_1.json  master_server_1.json  world_server_1.json  zone_server_1.json
cmake/: clang_settings.cmake  gcc_settings.cmake  msvc_settings.cmake  unix_settings.cmake  win_settings.cmake
cmake/macros/: AutoCollect.cmake  GroupSources.cmake
game/: CMakeLists.txt
game/db_mongo/: CMakeLists.txt  mongo_module.cpp  mongo_module.h  mongo_task.cpp  mongo_task.h
game/db_redis/: CMakeLists.txt  commond.cpp  redis_commond.hpp  redis_module.cpp  redis_module.h  redis_task.cpp  redis_task.h
game/game_common/: CMakeLists.txt  appid.cpp  appid.h  bson_object.cpp  bson_object.h  command_module.cpp  command_module.h  game_db_def.hpp  gid.cpp  gid.h  i_module.hpp  message_helper.hpp  message_router.hpp  proto_bason_handler.cpp  proto_bason_handler.h  query_callback.hpp  server_base.cpp  server_base.h
game/game_server/: CMakeLists.txt
game/game_server/db_server/: CMakeLists.txt  db_mongo_module.cpp  db_mongo_module.h  db_server.cpp  db_server.h  db_to_master_module.cpp  db_to_master_module.h  internal_server_module.cpp  internal_server_module.h  main.cpp
game/game_server/login_server/: CMakeLists.txt  client_to_login_module.cpp  client_to_login_module.h  internal_server_module.cpp  internal_server_module.h  login_server.cpp  login_server.h  login_to_db_module.cpp  login_to_db_module.h  login_to_master_module.cpp  login_to_master_module.h  main.cpp
game/game_server/master_server/: CMakeLists.txt  internal_network_server_module.cpp  internal_network_server_module.h  internal_server_module.cpp  internal_server_module.h  main.cpp  master_server.cpp  master_server.h  network_server_module.cpp  network_server_module.h
game/game_server/world_server/: CMakeLists.txt  client_to_world_server_module.cpp  client_to_world_server_module.h  internal_network_client_module.cpp  internal_network_client_module.h  internal_network_server_module.cpp  internal_network_server_module.h  internal_server_module.cpp  internal_server_module.h  main.cpp  network_client_module.cpp  network_client_module.h  network_server_module.cpp  network_server_module.h  player_manager_module.cpp  player_manager_module.h  world_server.cpp  world_server.h  world_to_master_module.cpp  world_to_master_module.h
game/game_server/world_server/player/: i_player_module.h  player.cpp  player.h  player_baseinfo_module.cpp  player_baseinfo_module.h  player_operator_module.cpp  player_operator_module.h
game/game_server/zone_server/: CMakeLists.txt  client_to_zone_module.cpp  client_to_zone_module.h  client_to_zone_server_module.cpp  client_to_zone_server_module.h  internal_server_module.cpp  internal_server_module.h  main.cpp  player_manager_module.cpp  player_manager_module.h  zone_server.cpp  zone_server.h  zone_to_db_module.cpp  zone_to_db_module.h  zone_to_master_module.cpp  zone_to_master_module.h
game/game_server/zone_server/player/: i_player_module.h  player.cpp  player.h  player_baseinfo_module.cpp  player_baseinfo_module.h  player_operator_module.cpp  player_operator_module.h
game/protocol/: CMakeLists.txt  gen_c2s_proto.bat  gen_s2s_proto.bat
game/protocol/c2s/: CMakeLists.txt  c2s_common.pb.cc  c2s_common.pb.h  c2s_common.proto  c2s_login.pb.cc  c2s_login.pb.h  c2s_login.proto
game/protocol/s2s/: CMakeLists.txt  db_mongo_proxy.pb.cc  db_mongo_proxy.pb.h  db_mongo_proxy.proto  db_player.pb.cc  db_player.pb.h  db_player.proto  s2s_common.pb.cc  s2s_common.pb.h  s2s_common.proto  s2s_global_data.pb.cc  s2s_global_data.pb.h  s2s_global_data.proto
game/test/: CMakeLists.txt  format_test.cpp  main.cpp  redis_test.cpp  test.h  test_format.cpp  test_log.cpp  test_login.cpp  test_mongo.cpp  test_redis.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  byte_convert.hpp  common.hpp  concurrent_queue.hpp  coroutine_awaitor.hpp  directory.hpp  file.hpp  format.hpp  log.hpp  message_buffer.hpp  platform.hpp  string.hpp  timer.cpp  timer.h  type_traits.hpp  typedefs.hpp  utils.cpp  utils.h
src/network/: base_connection.hpp  custom_connection.hpp  network_config.hpp  network_errorcode.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp
src/network/coroutine/: asio_coroutine_util.hpp  asio_executor.hpp  coroutine_connection.hpp  coroutine_server.hpp
src/network/http/: coro_http_client.hpp  http_server.hpp
src/server/: CMakeLists.txt  server_base.cpp  server_base.h  timer.cpp  timer.h
src/server/network/: base_connection.hpp  custom_connection.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp
